small fixes and added readme file

--- a/src/components/CardItem/styles.module.scss
+++ b/src/components/CardItem/styles.module.scss
@@ -102,5 +102,11 @@
             right: 8px;
             top: 55%;
         }
+
+        @media (hover:hover) {
+            &:hover {
+                filter:brightness(110%)
+            }
+        }
     }
 }
