--- a/src/components/PlayerFloating/styles.module.scss
+++ b/src/components/PlayerFloating/styles.module.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 0 u.toRem(16) 0;
-    max-width: u.toRem(318);
+    width: u.toRem(318);
     overflow: hidden;
     border-radius: 16px;
     background-color: var(--c-amber-accent-container-primary);
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 100%;
+    width: 100%;
     padding: u.toRem(16);
     gap: u.toRem(8);
 
