--- a/src/components/ListItem/styles.module.scss
+++ b/src/components/ListItem/styles.module.scss
@@ -3,6 +3,63 @@
 @use '../../styles/base/text' as t;
 @use '../../styles/base/breakpoints' as br;
 
+.shimmerItem {
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.imagePlaceholder {
+    width: 48px;
+    height: 48px;
+    background-image: linear-gradient(270deg,
+            rgba(189, 224, 249, 0.03) 0%,
+            rgba(189, 224, 249, 0.08) 50%,
+            rgba(189, 224, 249, 0.03) 100%);
+    background-size: 400% 400%;
+    border-radius: 8px;
+    animation: shimmer 800ms ease-in-out infinite;
+}
+
+.contentPlaceholder {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.contentLinePlaceholder:nth-child(1) {
+    width: 588px;
+    height: 18px;
+    background-image: linear-gradient(270deg,
+            rgba(189, 224, 249, 0.03) 0%,
+            rgba(189, 224, 249, 0.08) 50%,
+            rgba(189, 224, 249, 0.03) 100%);
+    background-size: 400% 400%;
+    animation: shimmer 800ms ease-in-out infinite;
+}
+
+.contentLinePlaceholder:nth-child(2) {
+    width: 530px;
+    height: 12px;
+    background-image: linear-gradient(270deg,
+            rgba(189, 224, 249, 0.03) 0%,
+            rgba(189, 224, 249, 0.08) 50%,
+            rgba(189, 224, 249, 0.03) 100%);
+    background-size: 400% 400%;
+    animation: shimmer 800ms ease-in-out infinite;
+}
+
+@keyframes shimmer {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    100% {
+        background-position: -135% 0%;
+    }
+}
+
 .outerWrapper {
     position: relative;
     overflow: hidden;
@@ -29,7 +86,8 @@
         background-color: transparent;
     }
 
-    &.isPlayingClass, &:hover.isPlayingClass {
+    &.isPlayingClass,
+    &:hover.isPlayingClass {
         background-color: var(--c-amber-accent-container-secondary);
     }
 
@@ -39,26 +97,31 @@
     }
 
     @keyframes blink {
-        0%{
+        0% {
             background-color: rgba(245, 163, 81, 0.2);
             transform: scale(1);
         }
-        25%{
+
+        25% {
             background-color: rgba(245, 163, 81, 0.4);
             transform: scale(1.02);
         }
-        50%{
+
+        50% {
             background-color: rgba(245, 163, 81, 0.4);
             transform: scale(1.02);
         }
-        100%{
+
+        100% {
             background-color: initial;
             transform: scale(1);
         }
     }
 
     @media (hover: hover) {
-        &:hover, &.blink:hover {
+
+        &:hover,
+        &.blink:hover {
             background-color: var(--c-surface-secondary);
         }
     }
@@ -175,11 +238,11 @@
                     color: var(--c-amber-accent-secondary);
                 }
 
-				&.isCollapsedClass::after {
-					content: ' ...more';
-					color: var(--c-on-surface-primary);
-					font-weight: 500;
-				}
+                &.isCollapsedClass::after {
+                    content: ' ...more';
+                    color: var(--c-on-surface-primary);
+                    font-weight: 500;
+                }
 
                 &.isCollapsedClass {
                     @include br.custom(834) {
@@ -187,6 +250,7 @@
                         white-space: nowrap;
                         overflow: hidden;
                         text-overflow: ellipsis;
+
                         &::after {
                             content: '';
                         }
@@ -241,7 +305,7 @@
     }
 
     p {
-        @include t.base("M","regular", 150%);
+        @include t.base("M", "regular", 150%);
 
         @include br.custom(500) {
             font-size: u.toRem(14);
@@ -251,7 +315,7 @@
 
 .seeLessButton {
     @include b.btn;
-    @include t.base("S","regular", "one-liner");
+    @include t.base("S", "regular", "one-liner");
     display: flex;
     align-items: center;
     padding: 4px 0;
@@ -266,7 +330,7 @@
 
 .playButtonPrimary {
     @include b.buttonIconPrimary(32);
-    
+
     @include br.custom(766) {
         margin-top: 16px;
         align-self: flex-start;
@@ -274,7 +338,7 @@
 
     @media (hover:hover) {
         &:hover {
-            filter:brightness(110%)
+            filter: brightness(110%)
         }
     }
 }
